INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

AUX_SOURCE_DIRECTORY(. CODE1_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QBase)

ADD_EXECUTABLE(server1 ${CODE1_SRC})
SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(server1 qbaselib)
ADD_DEPENDENCIES(server1 qbaselib)

