INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

AUX_SOURCE_DIRECTORY(. CODE2_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QBase)

ADD_EXECUTABLE(server2 ${CODE2_SRC})
SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(server2 qbaselib)
ADD_DEPENDENCIES(server2 qbaselib)

